add firrtl circt note

--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -777,6 +777,7 @@ class GCDMMIOBlackBox(val w: Int)
           <li>Mostly structural: registers, SRAMs, logic / arithmetic elements</li>
         </ul>
       </li>
+      <li class="fragment">First-class dialect supported in the MLIR / CIRCT compiler infrastructure</li>
       <!--<li class="fragment">SSA style in memory representation</li>-->
     </ul>
   </section>
