--- a/talks/themes/tokyonight-light.scss
+++ b/talks/themes/tokyonight-light.scss
@@ -1,1 +1,365 @@
-@use 'tokyonight-base.scss' with ($darkMode: false);
+// @use 'tokyonight-base.scss' with ($darkMode: false);
+@use 'sass:color';
+// Default mixins and settings -----------------
+@import "node_modules/reveal.js/css/theme/template/mixins";
+@import "node_modules/reveal.js/css/theme/template/settings";
+// ---------------------------------------------
+
+// Include theme-specific fonts
+@import url("/node_modules/@fontsource/fira-sans/latin.css");
+@import url("/node_modules/@fontsource/fira-sans/latin-italic.css");
+@import url("/node_modules/@fontsource/fira-code/latin.css");
+
+// Tokyonight colors
+// https://github.com/enkia/tokyo-night-vscode-theme
+$darkMode: false !default;
+ 
+// all of these are overridden by conditional below
+$tn_red: black;
+$tn_orange: black;
+$tn_yellow: black;
+$tn_green: black;
+$tn_blue_green: black;
+$tn_lightblue: black;
+$tn_blue2: black;
+$tn_cyan: black;
+$tn_blue: black;
+$tn_magenta: black;
+$tn_white: black;
+$tn_fg: black;
+$tn_text: black;
+$tn_beige: black;
+$tn_grey: black;
+$tn_black: black;
+$tn_bg_light: black;
+$tn_bg: black;
+@if $darkMode {
+  $tn_red: #f7768e;
+  $tn_orange: #ff9e64;
+  $tn_yellow: #e0af68;
+  $tn_green: #9ece6a;
+  $tn_blue_green: #73daca;
+  $tn_lightblue: #b4f9f8;
+  $tn_blue2: #2ac3de;
+  $tn_cyan: #7dcfff;
+  $tn_blue: #7aa2f7;
+  $tn_magenta: #bb9af7;
+  $tn_white: #c0caf5;
+  $tn_fg: #a9b1d6;
+  $tn_text: #9aa5ce;
+  $tn_beige: #cfc9c2;
+  $tn_grey: #565f89;
+  $tn_black: #414868;
+  $tn_bg_light: #24283b;
+  $tn_bg: #1a1b26;
+} @else {
+  $tn_red: #8c4351;
+  $tn_orange: #965027;
+  $tn_yellow: #8f5e15;
+  $tn_green: #485e30;
+  $tn_blue_green: #33635c;
+  $tn_lightblue: #166775;
+  $tn_blue2: #0f4b6e;
+  $tn_cyan: #0f4b6e; // duplicate
+  $tn_blue: #34548a;
+  $tn_magenta: #5a4a78;
+  $tn_white: #343b58;
+  $tn_fg: #d5d6db;
+  $tn_text: #565a6e;
+  $tn_beige: #565a6e; // duplicate
+  $tn_grey: #9699a3;
+  $tn_black: #0f0f14;
+  $tn_bg: #d5d6db;
+  $tn_bg_light: color.adjust($tn_bg, $lightness: +10%);
+}
+
+// https://picocss.com/docs/typography
+// Font sizes and spacing are the same as picocss
+:root {
+  // Use a larger-than-usual root font size, all other font sizes are given in rem
+  // This is the font size of regular text on a slide, so it must be larger than 16px
+  font-size: 28px;
+}
+
+// Override theme settings (see reveal-js/css/theme/template/settings.scss)
+// Background of the presentation
+$backgroundColor: $tn_bg_light;
+
+// Primary/body text
+$mainFont: 'Fira Sans', Helvetica, sans-serif;
+$mainFontSize: 1rem; // 1rem = :root font size
+@if $darkMode {
+  $mainColor: $tn_white;
+}
+@else {
+  $mainColor: $tn_black;
+}
+
+// Vertical spacing between blocks of text
+$blockMargin: 1rem;
+
+// Headings
+$headingMargin: 0 0 $blockMargin 0;
+$headingFont: 'Fira Sans', Helvetica, sans-serif;
+@if $darkMode {
+  $headingColor: $tn_white;
+}
+@else {
+  $headingColor: $tn_blue;
+}
+$headingLineHeight: 1.2;
+$headingLetterSpacing: normal;
+$headingTextTransform: none;
+$headingTextShadow: none;
+$headingFontWeight: 600;
+$heading1TextShadow: $headingTextShadow;
+
+// These font sizes are set by eye, there is no fancy calculation under the hood
+$heading1Size: 2rem;
+$heading2Size: 1.75rem;
+$heading3Size: 1.5rem;
+$heading4Size: 1.25rem;
+
+$codeFont: 'Fira Code', monospace;
+
+// Links and actions
+$linkColor: $tn_orange;
+$linkColorHover: lighten( $linkColor, 20% );
+
+// Text selection
+@if $darkMode {
+  $selectionBackgroundColor: $tn_black;
+  $selectionColor: $tn_white;
+}
+@else {
+  $selectionBackgroundColor: color.adjust($tn_blue, $lightness: +40%);
+  $selectionColor: $tn_white;
+}
+
+// Colors used for UI elements that are overlaid on top of
+// the presentation
+$overlayElementBgColor: 240, 240, 240;
+$overlayElementFgColor: 0, 0, 0;
+
+// Generates the presentation background, can be overridden
+// to return a background image or gradient
+@mixin bodyBackground() {
+	background: $tn_bg;
+}
+
+// Change text colors against light slide backgrounds
+@include light-bg-text-color($tn_black);
+
+// Theme template ------------------------------
+@import "node_modules/reveal.js/css/theme/template/theme";
+// ---------------------------------------------
+
+.reveal pre {
+  width: 100%;
+  code {
+    padding: 20px !important;
+  }
+}
+
+// Override reveal CSS defaults
+.reveal .slides .center {
+    text-align: center;
+}
+
+.reveal .slides {
+    text-align: left;
+}
+
+@counter-style numeric-no-dot {
+  system: fixed;
+  symbols: '1' '2' '3' '4' '5';
+  suffix: '   ';
+}
+
+// https://www.w3.org/TR/predefined-counter-styles/#digit-styles
+@counter-style parenthesized-decimal {
+  system: fixed;
+  symbols: '\2474' '\2475' '\2476' '\2477' '\2478' '\2479' '\247A' '\247B' '\247C' '\247D' '\247E' '\247F' '\2480' '\2481' '\2482' '\2483' '\2484' '\2485' '\2486' '\2487';
+  /* symbols: '⑴' '⑵' '⑶' '⑷' '⑸' '⑹' '⑺' '⑻' '⑼' '⑽' '⑾' '⑿' '⒀' '⒁' '⒂' '⒃' '⒄' '⒅' '⒆' '⒇'; */
+  suffix: ' ';
+}
+
+.reveal .slides section,
+.reveal .slides section>section {
+    // Use the picocss line height
+    line-height: 1.5;
+
+    // Shift slide headings down by a bit for aesthetics
+    h2 {
+      //margin-top: 0.5rem;
+    }
+
+    li::marker {
+      color: $tn_green;
+    }
+
+    // Add spacing between top-level bullets
+    > li:not(:first-child) {
+        margin-top: 1rem;
+    }
+
+    // Decrease the font-size of any sub-bullets
+    ul > li > ul > li {
+        font-size: 80%;
+    }
+
+    blockquote {
+        padding: 1rem;
+    }
+
+    ol {
+      //list-style: parenthesized-decimal;
+      list-style: numeric-no-dot;
+      > li::marker {
+        color: $tn_green;
+        font-size: 0.9rem;
+        margin-right: 1rem;
+        font-weight: bold;
+      }
+    }
+    //ol {list-style: none; counter-reset: li}
+
+    //ol > li::before {content: counter(li); color: red;
+    //  display: inline-block; width: 1em;
+    //  margin-left: -1em}
+
+    //li {counter-increment: li}
+    code {
+      background: color.adjust($tn_fg, $lightness: +10%);
+    }
+}
+
+.reveal{
+  .controls {
+    color: color.adjust($tn_orange, $lightness: +30%);
+  }
+  .slide-number {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
+
+.container{
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 1em;
+  > div {
+    display: grid;
+    place-items: center;
+  }
+}
+
+.smallish {
+    font-size: 0.9rem;
+}
+
+.small {
+    font-size: 0.8rem;
+}
+
+.verysmall {
+    font-size: 0.75rem;
+}
+
+.tiny {
+  font-size: 0.6rem;
+}
+
+.footnote {
+    color: #666;
+}
+
+.red {
+  color: $tn_red;
+}
+
+.bg-red {
+  background: $tn_red;
+  color: $tn_bg;
+}
+
+.orange {
+  color: $tn_orange;
+}
+
+.bg-orange {
+  background: $tn_orange;
+}
+
+.bg-blue {
+  background: $tn_blue;
+}
+
+.bg-grey {
+  background: $tn_grey;
+}
+
+.yellow {
+  color: $tn_yellow;
+}
+
+.bg-yellow {
+  background: $tn_yellow;
+  color: $tn_bg;
+}
+
+.green {
+  color: $tn_green;
+}
+
+.bg-green {
+  background: $tn_green;
+  color: $tn_bg;
+}
+
+.bg-white {
+  background: color.adjust($tn_white, $lightness: +7%);
+}
+
+.laser-pointer {
+  @if $darkMode {
+    background: color.adjust($tn_red, $alpha: -0.3) !important;
+  }
+  @else {
+    background: color.adjust($tn_red, $lightness: +20%, $alpha: -0.3) !important;
+  }
+}
+
+// div.image: usually wrapping multiple images with one uniform background
+img.image, div.image {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  //background: color.adjust($tn_white, $lightness: +7%);
+  background: white;
+}
+
+// Add to any element to strip away the usual margins (usually added to images)
+.no-margin {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+// Add to any element to strip away padding (also usually applied to images)
+.no-padding {
+  padding: 0 !important;
+}
+
+.footnote {
+    color: $tn_text;
+    border-top: 2px solid $tn_grey;
+    font-size: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    padding-top: 0.5rem;
+}
+
+.reference {
+  vertical-align: super;
+  font-size: 0.5rem;
+  color: $tn_text;
+}
