--- a/talks/talks/2024_04-athlete-tidalsim_overview.jinja2
+++ b/talks/talks/2024_04-athlete-tidalsim_overview.jinja2
@@ -67,7 +67,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   <h2>TidalSim: Fast, High-Fidelity, Low-Latency Microarchitectural Simulation</h2>
   <h3 style="font-weight: normal;">Functional Warmup, Error Analysis, Caching and Parallelism API</h3>
   <h5 style="font-weight: normal;"><strong>Vighnesh Iyer</strong>, Dhruv Vaish, Raghav Gupta, Young-Jin Park, Charles Hong, Sophia Shao, Bora Nikolic</h5>
-  
+
   <h5>ATHLETE Quarterly Update<br />
   Monday, April 29th, 2024</h5>
 </section>
@@ -160,7 +160,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       </tr>-->
       </tbody>
     </table>
-  
+
     <ul style="margin-top: 1rem;">
       <li class="fragment">There is no simulation technique that meets all our criteria:
         <ol>
@@ -315,12 +315,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <img class="no-margin" style="display:grid;" src="./figs/multi-level-sim/simpoint-gcc_phases.gif" />
     </div>
     <ul class="small">
-      <li class="fragment">Program execution traces aren’t random
-        <ul class="fragment">
-          <li>They execute the same code again-and-again</li>
-          <li>Workload execution traces can be split into <strong style="text-decoration:underline;">phases</strong> that exhibit similar μArch behavior</li>
-        </ul>
-      </li>
+      <li class="fragment">Workloads can be split into <strong style="text-decoration:underline;">phases</strong> that exhibit similar μArch behavior</li>
       <li class="fragment">SimPoint-style representative sampling
         <ul class="fragment">
           <li>Compute an embedding for each program interval (e.g. blocks of 100M instructions)</li>
@@ -334,12 +329,13 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <h3 class="center fragment">SMARTS</h3>
       <img class="fragment image no-margin no-padding" src="./figs/quals/smarts.png" />
       <ul class="small">
-        <li class="fragment">Rigorous statistical sampling enables computation of confidence bounds
+        <li class="fragment">If we sample from a population, we can estimate the population mean</li>
+        <!--<li class="fragment">Rigorous statistical sampling enables computation of confidence bounds
           <ul class="fragment">
             <li>Use random sampling on a full execution trace to derive a population sample</li>
             <li>Central limit theorem provides confidence bounds</li>
           </ul>
-        </li>
+        </li>-->
         <li class="fragment">SMARTS-style random sampling
           <ul class="fragment">
             <li>Pick a large number of samples to take before program execution</li>
@@ -370,12 +366,12 @@ import 'highlight.js/styles/tokyo-night-dark.css'
 
 <section>
   <section class="center">
-    <h2>TidalSim Implementation</h2>
+    <h1>TidalSim Implementation</h1>
   </section>
 
   <section style="text-align: center;">
     <h2>Overview of the TidalSim Flow</h2>
-    <img src="./figs/dynamic/tidalsim/overview.svg" />
+    <img class="image" src="./figs/dynamic/tidalsim/overview.svg" />
   </section>
 
   <section>
@@ -402,7 +398,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
     </ul>
     </div>
     <div style="display:grid; align-content: center;">
-      <img src="./figs/dynamic/tidalsim/overview.svg" />
+      <img class="image no-margin" src="./figs/dynamic/tidalsim/overview.svg" />
     </div>
     </div>
   </section>
@@ -410,12 +406,12 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   <section>
     <h2>Overall Functional Warmup Flow</h2>
     <div class="center">
-      <img src="./figs/dynamic/tidalsim/full_flow_detail.svg" />
+      <img class="image no-margin" src="./figs/dynamic/tidalsim/full_flow_detail.svg" />
     </div>
 
     <ul class="small">
       <li class="fragment">uarch-agnostic cache checkpoints as memory timestamp record (MTR) checkpoints</li>
-      <li class="fragment">Convert MTR checkpoints into concrete cache state with specific cache parameters DRAM contents</li>
+      <li class="fragment">MTR checkpoints {{ rightarrow }} cache state with cache parameters and DRAM contents</li>
       <li class="fragment">RTL simulation harness injects cache state into L1d tag+data arrays via 2d reg forcing</li>
     </ul>
   </section>
@@ -423,7 +419,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   <section>
     <h2>Memory Timestamp Record</h2>
     <div class="center">
-      <img src="./figs/dynamic/tidalsim/mtr_flow.svg" />
+      <img class="image" src="./figs/dynamic/tidalsim/mtr_flow.svg" />
     </div>
 
     <ul class="small">
@@ -435,15 +431,17 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   </section>
 
   <section>
-    <h2>Results on wikisort</h2>
+    <h2>Results</h2>
+
+    <p class="center smallish">Wikisort benchmark from embench, $N = 10000$, $C = 18$, $n_{\text{detailed}} = 2000$</p>
 
     <div class="center r-stack">
       <div class="fragment fade-in-then-out">
-        <img src="./figs/multi-level-sim/wikisort_results.svg" />
+        <img class="image no-margin" src="./figs/multi-level-sim/wikisort_results.svg" />
         <figcaption>No functional warmup, there are significant IPC underpredictions</figcaption>
       </div>
       <div class="fragment fade-in">
-        <img src="./figs/multi-level-sim/wikisort_results-l1d_warmup.svg" />
+        <img class="image no-margin" src="./figs/multi-level-sim/wikisort_results-l1d_warmup.svg" />
         <figcaption>L1d functional warmup, errors are substantially reduced</figcaption>
       </div>
     </div>
@@ -452,20 +450,17 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   </section>
 
   <section>
-    <h2>Results on huffbench</h2>
+    <h2>Results</h2>
 
-    <div class="center r-stack">
-      <div class="fragment fade-in-then-out">
-        <img src="./figs/multi-level-sim/huffbench_results-no_warmup.svg" />
-        <figcaption>No functional warmup, there are significant IPC underpredictions</figcaption>
-      </div>
-      <div class="fragment fade-in">
-        <img src="./figs/multi-level-sim/huffbench_results-warmup.svg" />
-        <figcaption>L1d functional warmup, errors are substantially reduced</figcaption>
-      </div>
+    <p class="center smallish">Huffbench benchmark from embench, $N = 10000$, $C = 18$, $n_{\text{detailed}} = 2000$</p>
+
+    <div class="fragment center">
+      <img class="image no-margin" src="./figs/multi-level-sim/huffbench_results-no_warmup.svg" />
     </div>
 
-    <p class="center fragment"><strong>L1d functional warmup brings IPC error from 7% to 2%</strong></p>
+    <div class="fragment center">
+      <img class="image no-margin" src="./figs/multi-level-sim/huffbench_results-warmup.svg" />
+    </div>
   </section>
 
   <!--<section>
@@ -490,12 +485,10 @@ import 'highlight.js/styles/tokyo-night-dark.css'
   </section>-->
 </section>
 
-<section>
+<!--<section>
   <section class="center">
     <h2>Functional Warmup of L1d Cache + Early Results</h2>
   </section>
-
-
 
   <section>
     <h2>Caveats</h2>
@@ -507,39 +500,11 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <li class="fragment">Cannot perform L2 injection or handle multiple cores</li>
     </ul>
   </section>
-</section>
-
+</section>-->
 
 <section>
   <section class="center">
     <h1>Ideas Around Error Analysis</h1>
-  </section>
-
-  <section>
-    <h2>Sampled Simulation on wikisort</h2>
-
-    <div class="center r-stack">
-      <div class="fragment fade-in-then-out">
-        <img class="image" src="./figs/multi-level-sim/wikisort_results.svg" />
-        <figcaption>No functional warmup, there are significant IPC underpredictions</figcaption>
-      </div>
-      <div class="fragment fade-in">
-        <img class="image" src="./figs/multi-level-sim/wikisort_results-l1d_warmup.svg" />
-        <figcaption>L1d functional warmup, errors are substantially reduced</figcaption>
-      </div>
-    </div>
-
-    <p class="center fragment"><strong>L1d functional warmup brings IPC error from 7% to 2%</strong></p>
-  </section>
-
-  <section>
-    <h2>Error Analysis</h2>
-    <ul>
-      <li class="fragment">Where does this 7% error come from? Why does it go down to 2%?</li>
-      <li class="fragment">For a given interval for which we know the IPC error, what parts contribute what amount to the error?</li>
-      <li class="fragment">How does the error breakdown change based on workload and sampling algorithm?</li>
-      <li class="fragment">How do we even break down the error? Can we leverage the access we have to full RTL simulation?</li>
-    </ul>
   </section>
 
   <section>
@@ -610,7 +575,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <li class="fragment">On its own, this error is the <em>maximum</em> error possible per interval
         <ul>
           <li>Each extra thing we do (functional warmup, detailed warmup, warmup offset selection) serves to <em>reduce</em> this baseline error</li>
-          <li>The remaining error can be attributed to deficiencies in functional or detailed warmup (marginal) + embedding error</li>
+          <li>The remaining error can be attributed to deficiencies in functional or detailed warmup + embedding error</li>
         </ul>
       </li>
     </ul>
@@ -638,7 +603,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
     </ul>
   </section>
 
-  <section>
+  <!--<section>
     <h2>Warmup Oracles</h2>
 
     <img class="fragment image no-margin" src="./figs/dynamic/tidalsim-error/functional_warmup.svg" width="100%" />
@@ -652,6 +617,10 @@ import 'highlight.js/styles/tokyo-night-dark.css'
         </ul>
       </li>
     </ul>
+  </section>-->
+
+  <section class="center">
+    <h2>Backup Slides</h2>
   </section>
 
   <section>
@@ -814,6 +783,27 @@ import 'highlight.js/styles/tokyo-night-dark.css'
       <li class="fragment">Build graph is constructed and execution is lazy</li>
     </ul>
   </section>
+</section>
+
+<section>
+  <h2>Conclusion</h2>
+
+  <div class="container" style="grid-template-columns: 1fr 1.5fr;">
+  <div>
+    <ul class="smallish" style="display:grid; align-self: baseline;">
+      <li class="fragment">We want to enable rapid RTL iteration with performance evaluation and generation of RTL-level collateral</li>
+      <li class="fragment">We need fast, low-startup-latency RTL-level simulation</li>
+      <li class="fragment">We propose <strong>TidalSim</strong>, a simulation methodology based on sampled RTL simulation</li>
+      <li class="fragment">Everything is open source
+        <ul><li><a href="https://github.com/euphoric-hardware/tidalsim">TidalSim (github.com/euphoric-hardware/tidalsim)</a> <small>Forks of spike, chipyard, testchipip + top-level runner</small></li></ul>
+      </li>
+    </ul>
+  </div>
+  <div style="display:grid; align-content: center; position: relative; top: -0%;">
+    <img class="image no-margin" width="70%" src="./figs/dynamic/tidalsim/overview.svg" />
+    <img class="image" width="80%" src="./figs/dynamic/tidalsim/full_flow_detail.svg" />
+  </div>
+  </div>
 </section>
 
 {% endblock %}
